--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,13 @@
+:root{
+  --black : #090909;
+  --white : #ffffff;
+  --light-Beige : #dec7a0;
+  --dark-Beige : #c4a287;
+  --dark-red : #7b070b;
+  --main-red : #ba042d;
+  --light-red : #d42a41;
+  --lighter-red : #eb4b5b;
+}
 /* resset style */
 *,
 *::after,
