--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,12 +1,12 @@
-:root{
-  --black : #090909;
-  --white : #ffffff;
-  --light-Beige : #dec7a0;
-  --dark-Beige : #c4a287;
-  --dark-red : #7b070b;
-  --main-red : #ba042d;
-  --light-red : #d42a41;
-  --lighter-red : #eb4b5b;
+:root {
+  --black: #090909;
+  --white: #ffffff;
+  --light-Beige: #dec7a0;
+  --dark-Beige: #c4a287;
+  --dark-red: #7b070b;
+  --main-red: #ba042d;
+  --light-red: #d42a41;
+  --lighter-red: #eb4b5b;
 }
 /* resset style */
 *,
@@ -17,4 +17,10 @@
   box-sizing: border-box;
   list-style-type: none;
   text-decoration: none;
+}
+
+/* width and height boxing */
+.container {
+  max-width: 1280px;
+  margin: 0px auto;
 }
