--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -49,7 +49,7 @@
 }
 .menu-item {
   padding: 0 20px;
-  transition: all 0.3s ease;
+  transition: all 0.3s ease-in;
 }
 .menu-item:hover {
   border-top: 2px solid var(--white);
@@ -67,4 +67,50 @@
   background-color: var(--white);
   color: var(--main-red);
   box-shadow: none;
+}
+.header-main {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 70vh;
+}
+.info-box {
+  padding: 5px 10px;
+  margin: 0 10px;
+}
+.info-box1 {
+  background-color: var(--lighter-red);
+}
+.info-box2 {
+  background-color: var(--light-red);
+}
+.info-box3 {
+  background-color: var(--main-red);
+}
+.site-title {
+  font-size: 50px;
+  margin-top: 20px;
+}
+.header-main-description {
+  max-width: 450px;
+  text-align: justify;
+  margin-top: 40px;
+}
+.header-main-links {
+  margin-top: 30px;
+}
+.header-main-link1 {
+  padding: 10px 20px;
+  background-color: var(--main-red);
+  border-radius: 20px;
+}
+.header-main-link2 {
+  padding: 10px 20px;
+  background-color: var(--dark-red);
+  border-radius: 20px;
+  margin-left: 20px;
+}
+.header-poster {
+  width: 300px;
+  height: 40vh;
 }
