--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -74,6 +74,20 @@
   align-items: center;
   height: 70vh;
 }
+.header-main-left {
+  animation-duration: 3s;
+  animation-name: goRight;
+}
+@keyframes goRight {
+  from {
+    translate: -30vh 0;
+    scale: 100% 1;
+  }
+  to {
+    translate: 0 0;
+    scale: 100% 1;
+  }
+}
 .info-box {
   padding: 5px 10px;
   margin: 0 10px;
