--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,5 @@
 :root {
-  --black: #09090909;
+  --black: #090909;
   --white: #ffffff;
   --light-Beige: #dec7a0;
   --dark-Beige: #c4a287;
@@ -22,7 +22,6 @@
   box-sizing: border-box;
   list-style-type: none;
   text-decoration: none;
-  background-color: var(--black);
   color: var(--white);
   font-size: 20px;
 }
@@ -44,6 +43,7 @@
   width: 60px;
   height: 60px;
 }
+/* menu */
 .menu-items {
   display: flex;
 }
@@ -68,6 +68,7 @@
   color: var(--main-red);
   box-shadow: none;
 }
+/* header main */
 .header-main {
   display: flex;
   justify-content: space-between;
@@ -117,12 +118,20 @@
   padding: 10px 20px;
   background-color: var(--main-red);
   border-radius: 20px;
+  transition: all 0.3s ease-in;
+}
+.header-main-link1:hover {
+  background-color: var(--black);
 }
 .header-main-link2 {
   padding: 10px 20px;
   background-color: var(--dark-red);
   border-radius: 20px;
   margin-left: 20px;
+  transition: all 0.3s ease-in;
+}
+.header-main-link2:hover {
+  background-color: var(--black);
 }
 .header-main-right {
   animation-duration: 3s;
