--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -34,7 +34,8 @@
   background-size: cover;
 }
 .menu {
-  padding-top: 5vh;
+  /* padding-top: 5vh; */
+  padding: 20px 0px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -74,10 +75,13 @@
   justify-content: space-between;
   align-items: center;
   height: 70vh;
+  /* 100% with parent */
+  width: 100%;
 }
 .header-main-left {
   animation-duration: 3s;
   animation-name: goRight;
+  width: 45%;
 }
 @keyframes goRight {
   from {
@@ -136,6 +140,8 @@
 .header-main-right {
   animation-duration: 3s;
   animation-name: goLeft;
+  width: 45%;
+  padding-top: 50px;
 }
 @keyframes goLeft {
   from {
@@ -148,6 +154,9 @@
   }
 }
 .header-poster {
-  width: 300px;
-  height: 40vh;
+  display: block;
+  width: 350px;
+  margin-right: auto;
+  margin-left: auto;
+  /* height: 40vh; */
 }
