--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -137,6 +137,8 @@
 .header-main-right {
   animation-duration: 3s;
   animation-name: goLeft;
+  width: 45%;
+  padding-top: 50px;
 }
 @keyframes goLeft {
   from {
@@ -149,6 +151,8 @@
   }
 }
 .header-poster {
-  width: 300px;
-  height: 50vh;
+  display: block;
+  width: 350px;
+  margin-right: auto;
+  margin-left: auto;
 }
