--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -163,3 +163,102 @@
   padding: 100px 50px;
 }
 /* end slider styles area*/
+/* ********************** */
+/* started about movie and slider actors */
+.section-actors {
+  width: 1280px;
+  height: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
+.section-actors-container {
+  display: grid;
+}
+/* about actors */
+.about-actors {
+  display: grid;
+  grid-template-columns: 260px 2fr 1fr;
+  background: #626262;
+  border-radius: 5px;
+}
+.movie-desc {
+  padding-top: 70px;
+  padding-left: 30px;
+}
+.movie-desc-title {
+  color: #fff;
+}
+.movie-desc-description {
+  color: #cacaca;
+  padding-right: 80px;
+}
+.movie-desc-description p:nth-child(1) {
+  padding-top: 20px;
+  margin-bottom: 15px;
+}
+.movie-about-actors {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 20px;
+  padding-left: 20px;
+  border-left: 2px solid #fff !important;
+}
+.about-more-actors {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding-right: 10px;
+}
+.about-more-image {
+  width: 69px;
+  height: 70px;
+  border-radius: 50%;
+}
+.about-more-actors > h5 {
+  color: white;
+}
+.movie-img {
+  width: 260px;
+  height: 100%;
+  border-radius: 5px;
+}
+/* actors slid */
+.section-actors-slide {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.actors-slid-container {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  justify-items: center !important;
+}
+.actor-sliders {
+  width: 280px;
+  height: 100%;
+  position: relative;
+}
+.actors-images {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 5px;
+}
+.actors-description {
+  height: 60px;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: #0000009e;
+}
+.actors-description > h4 {
+  color: white;
+  padding-top: 8px;
+}
+.actors-description > a {
+  color: #cacaca;
+  /* padding-top: 5px; */
+}
+/* end about movie and slider actors */
