--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -166,8 +166,8 @@
 /* ********************** */
 /* started about movie and slider actors */
 .section-actors {
+  background: var(--black);
   padding-top: 60px;
-  width: 1280px;
   height: 100%;
   margin-right: auto;
   margin-left: auto;
@@ -179,7 +179,6 @@
 .about-actors {
   display: grid;
   grid-template-columns: 260px 2fr 1fr;
-  background: #626262;
   border-radius: 5px;
 }
 .movie-desc {
