--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -22,8 +22,31 @@
   box-sizing: border-box;
   list-style-type: none;
   text-decoration: none;
+  scroll-behavior: smooth;
   color: var(--white);
   font-size: 20px;
+}
+body{
+  overflow-x: hidden;
+}
+/* text select color */
+::selection {
+  background: var(--dark-red);
+  color: var(--black);
+}
+/* scroll-y styles */
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-track {
+  background: var(--black);
+}
+::-webkit-scrollbar-thumb {
+  background: var(--dark-red);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: var(--main-red);
 }
 /* Header style */
 
