--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -26,7 +26,7 @@
   color: var(--white);
   font-size: 20px;
 }
-body{
+body {
   overflow-x: hidden;
 }
 /* text select color */
@@ -285,3 +285,83 @@ body{
   /* padding-top: 5px; */
 }
 /* end about movie and slider actors */
+
+/* started section 6 styles*/
+.section-6 {
+  height: 70vh;
+  background-color: #ea1111;
+  background: linear-gradient(to top, #090909f8, #090909c7),
+    url("../../assets/images/slider-images/slider-img4.jpg   ") no-repeat;
+  background-size: cover;
+}
+.sec6-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+  width: 100%;
+}
+.sec6-container .video-box {
+  width: 50%;
+  margin-right: 40px;
+}
+.sec6-container .video-box > video {
+  width: 100%;
+}
+.sec6-content-box {
+  width: 40%;
+  text-align: right;
+}
+.sec6-label-box > span {
+  padding: 5px 10px;
+  margin: 0 10px;
+}
+.sec6-label-1 {
+  background-color: var(--dark-red);
+}
+.sec6-label-2 {
+  background-color: var(--main-red);
+}
+.sec6-label-3 {
+  background-color: var(--light-red);
+  margin-right: 0px !important;
+}
+.sec6-content-box > h1 {
+  font-size: 40px;
+  margin: 10px 0px;
+}
+.sec6-content-box > p {
+  font-size: 20px;
+  margin: 30px 0px;
+  text-align: justify;
+}
+.sec6-button-box {
+  margin-top: 50px;
+}
+.sec6-button-1 {
+  padding: 10px 20px;
+  background-color: var(--main-red);
+  border-radius: 20px;
+  transition: all 0.3s ease-in;
+}
+.sec6-button-1:hover {
+  background-color: var(--black);
+  border: 1px solid var(--dark-red);
+  box-shadow: 0px 0px 38px 4px var(--dark-red);
+}
+
+.sec6-button-2 {
+  padding: 10px 20px;
+  background-color: var(--light-red);
+  border-radius: 20px;
+  margin-left: 20px;
+  transition: all 0.3s ease-in;
+}
+.sec6-button-2:hover {
+  background-color: var(--black);
+  border: 1px solid var(--dark-red);
+  box-shadow: 0px 0px 38px 4px var(--dark-red);
+}
+/* end section 6 styles*/
+
+/* started section 7 styles*/
