--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -26,7 +26,7 @@
   color: var(--white);
   font-size: 20px;
 }
-body{
+body {
   overflow-x: hidden;
 }
 /* text select color */
@@ -285,3 +285,244 @@ body{
   /* padding-top: 5px; */
 }
 /* end about movie and slider actors */
+* {
+  padding-top: 0;
+  padding-right: 0;
+  padding-left: 0;
+  padding-bottom: 0;
+  margin-top: 0;
+  margin-right: 0;
+  margin-left: 0;
+  margin-bottom: 0;
+
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body {
+  width: 100%;
+}
+.btn-top-1 {
+  color: aliceblue;
+  font-size: 13px;
+  text-decoration: none;
+  background-color: #f59e00;
+  padding: 3px;
+}
+.btn-top-2 {
+  color: aliceblue;
+  font-size: 13px;
+  text-decoration: none;
+  background-color: rgb(82, 150, 251);
+  padding: 3px;
+}
+.btn-top-3 {
+  color: aliceblue;
+  font-size: 13px;
+  text-decoration: none;
+  background-color: #d2691e;
+  padding: 3px;
+}
+
+.home1 {
+  width: 100% !important;
+  height: 100vh;
+  background: #646464 !important;
+  background: url("") no-repeat;
+  background-size: cover;
+  background-position: center;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.home-content-container {
+  width: 1280px !important;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.video {
+  display: block !important;
+}
+.title {
+  font-size: 35px;
+  font-weight: 700;
+  line-height: 1.3;
+  padding-bottom: 20px;
+}
+.title-container {
+  text-align: right;
+}
+.desc {
+  text-align: right;
+  font-size: 16px;
+  padding-bottom: 20px;
+}
+.home-content-container .btn-box {
+  text-align: right;
+  height: 50px;
+}
+.title-content {
+  margin-bottom: 60px;
+  /* background: #000; */
+  padding: 0px 40px 0px 100px;
+}
+.btn-container {
+  text-align: right;
+}
+.btn-box a {
+  position: relative;
+  text-decoration: none;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 130px;
+  height: 70%;
+  background: rgb(255, 0, 0);
+  border-radius: 50px;
+  font-size: 19px;
+  color: rgb(255, 255, 255);
+  font-weight: 300;
+  letter-spacing: 1px;
+  z-index: 1;
+  overflow: hidden;
+}
+.btn-box a:nth-child(2) {
+  background-color: black;
+  color: rgb(255, 255, 255);
+}
+.btn-box a:nth-child(2)::before {
+  background: rgb(255, 0, 0);
+}
+.btn-box a:nth-child(2):hover {
+  color: rgb(249, 249, 249);
+}
+.btn-box a::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  color: black;
+  background: rgb(0, 0, 0);
+  z-index: -1;
+  transition: 0.7s;
+}
+.btn-box a:hover {
+  color: rgb(255, 255, 255);
+}
+.btn-box a:hover:before {
+  width: 100%;
+}
+.home-page {
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(164, 208, 238, 0.2)),
+    url("./images/back.jpg.webp") no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+}
+.home-page-content {
+  color: rgb(255, 255, 255);
+  padding: 0 auto;
+  width: 900px;
+  padding: 0 10%;
+  margin-left: 80px;
+}
+.btn-but-top-1 {
+  color: aliceblue;
+  font-size: 13px;
+  text-decoration: none;
+  background-color: #f59e00;
+  padding: 3px;
+}
+.btn-but-top-2 {
+  color: aliceblue;
+  font-size: 13px;
+  text-decoration: none;
+  background-color: rgb(82, 150, 251);
+  padding: 3px;
+}
+.btn-but-top-3 {
+  color: aliceblue;
+  font-size: 13px;
+  text-decoration: none;
+  background-color: #d2691e;
+  padding: 3px;
+  flex-direction: flex;
+}
+.home-page {
+  height: 100vh;
+  background: url("../../assets/images/back.jpg.webp") no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  padding: 0 10%;
+}
+.home-page-content h1 {
+  font-size: 35px;
+  font-weight: 700;
+  line-height: 1.3;
+  padding-bottom: 20px;
+}
+.home-page-content p {
+  font-size: 16px;
+  padding-bottom: 20px;
+}
+.home-page-content .btn-box1 {
+  display: flex;
+  width: 300px;
+  height: 50px;
+}
+.btn-box1 a {
+  position: relative;
+  text-decoration: none;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 130px;
+  height: 70%;
+  background: rgb(255, 0, 0);
+  border-radius: 50px;
+  font-size: 19px;
+  color: rgb(255, 255, 255);
+  font-weight: 600;
+  letter-spacing: 1px;
+  z-index: 1;
+  overflow: hidden;
+}
+.btn-box1 a:nth-child(2) {
+  color: rgb(254, 253, 255);
+  background-color: black;
+  margin-left: 5px;
+}
+.btn-box1 a:nth-child(2)::before {
+  background: rgb(255, 0, 0);
+}
+
+.btn-box1 a::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  color: rgb(255, 255, 255);
+  background: rgb(0, 0, 0);
+  z-index: -1;
+  transition: 0.7s;
+}
+.btn-box1 a:hover:before {
+  width: 100%;
+}
+.video {
+  display: flex;
+  justify-content: space-around;
+}
