--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -177,7 +177,7 @@ body {
 }
 .header-poster {
   display: block;
-  width: 350px;
+  margin-top: 100px;
   margin-right: auto;
   margin-left: auto;
 }
