--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -81,6 +81,13 @@ body {
 }
 .menu-btn1 {
   padding: 10px 20px;
+  border-radius: 20px;
+  transition: all 0.3s ease;
+}
+.menu-btn1:hover {
+  background-color: var(--black);
+  border: 1px solid var(--dark-red);
+  box-shadow: 0px 0px 38px 4px var(--dark-red);
 }
 .menu-btn2 {
   padding: 10px 20px;
@@ -89,9 +96,9 @@ body {
   transition: all 0.3s ease;
 }
 .menu-btn2:hover {
-  background-color: var(--white);
-  color: var(--main-red);
-  box-shadow: none;
+  background-color: var(--black);
+  border: 1px solid var(--dark-red);
+  box-shadow: 0px 0px 38px 4px var(--dark-red);
 }
 /* header main */
 .header-main {
@@ -149,22 +156,25 @@ body {
 }
 .header-main-link1:hover {
   background-color: var(--black);
+  border: 1px solid var(--dark-red);
+  box-shadow: 0px 0px 38px 4px var(--dark-red);
 }
 .header-main-link2 {
   padding: 10px 20px;
-  background-color: var(--dark-red);
+  background-color: var(--black);
   border-radius: 20px;
   margin-left: 20px;
   transition: all 0.3s ease-in;
 }
 .header-main-link2:hover {
   background-color: var(--black);
+  border: 1px solid var(--dark-red);
+  box-shadow: 0px 0px 38px 4px var(--dark-red);
 }
 .header-main-right {
   animation-duration: 3s;
   animation-name: goLeft;
   width: 45%;
-  padding-top: 50px;
 }
 @keyframes goLeft {
   from {
@@ -178,9 +188,10 @@ body {
 }
 .header-poster {
   display: block;
-  margin-top: 100px;
+  margin-top: 50px;
   margin-right: auto;
   margin-left: auto;
+  width: 450px;
 }
 /* started slider styles area*/
 .slider-section {
@@ -230,7 +241,7 @@ body {
   transition: all 0.3s;
 }
 .btn-box a:nth-child(2) {
-  background-color: var(--dark-red);
+  background-color: var(--black);
 }
 .btn-box a:hover {
   background-color: var(--black);
@@ -394,13 +405,13 @@ body {
   margin: 0 10px;
 }
 .sec6-label-1 {
-  background-color: var(--dark-red);
+  background-color: var(--light-red);
 }
 .sec6-label-2 {
   background-color: var(--main-red);
 }
 .sec6-label-3 {
-  background-color: var(--light-red);
+  background-color: var(--dark-red);
   margin-right: 0px !important;
 }
 .sec6-content-box > h1 {
@@ -417,7 +428,7 @@ body {
 }
 .sec6-button-1 {
   padding: 10px 20px;
-  background-color: var(--main-red);
+  background-color: var(--light-red);
   border-radius: 20px;
   transition: all 0.3s ease-in;
 }
@@ -429,7 +440,7 @@ body {
 
 .sec6-button-2 {
   padding: 10px 20px;
-  background-color: var(--light-red);
+  background-color: var(--black);
   border-radius: 20px;
   margin-left: 20px;
   transition: all 0.3s ease-in;
