make slider hover

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -349,29 +349,44 @@ body {
   height: 100%;
   position: relative;
 }
+
+.actor-sliders:hover .actors-images {
+  opacity: 0.3;
+}
+.actor-sliders:hover .actors-description {
+  opacity: 1;
+}
 .actors-images {
-  width: 100%;
   height: 100%;
-  display: block;
   border-radius: 5px;
+  opacity: 1;
+  display: block;
+  width: 100%;
+  /*height: auto;*/
+  transition: 0.5s ease;
+  backface-visibility: hidden;
 }
 .actors-description {
-  height: 60px;
+  height: 80px;
   text-align: center;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  left: 0;
   background: #0000009e;
-}
-.actors-description > h4 {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   color: white;
-  padding-top: 8px;
+  font-size: 16px;
+  padding: 16px 32px;
+  width: 180px;
 }
-.actors-description > a {
-  color: #cacaca;
-  /* padding-top: 5px; */
+.actors-description:hover {
+  cursor: pointer;
+  border-radius: 15px;
 }
+
 /* end about movie and slider actors */
 
 /* started section 6 styles*/
