--- a/src/pages/actor1-page/actor1.css
+++ b/src/pages/actor1-page/actor1.css
@@ -57,8 +57,25 @@ header {
       no-repeat;
   background-size: cover;
 }
+.nav-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  padding-top: 50px;
+}
 .logo {
   width: 300px;
+}
+.nav-top-right {
+  display: flex;
+}
+.nav-icon {
+  width: 50px;
+  height: 50px;
+  background: inherit;
+  border: 1px solid var(--white);
+  border-radius: 50px;
+  margin-left: 20px;
 }
 
 /* start winning-awards => cena */
