--- a/src/pages/actor1-page/actor1.css
+++ b/src/pages/actor1-page/actor1.css
@@ -70,14 +70,21 @@ header {
   display: flex;
 }
 .nav-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 50px;
   height: 50px;
   background: inherit;
   border: 1px solid var(--white);
   border-radius: 50px;
-  margin-left: 20px;
+  margin: 0 10px;
 }
-
+.nav-btn {
+  padding: 10px 30px;
+  background-color: var(--main-red);
+  border-radius: 50px;
+}
 /* start winning-awards => cena */
 .winning-awards-section {
   /* background-image must set there */
