--- a/src/pages/actor1-page/actor1.css
+++ b/src/pages/actor1-page/actor1.css
@@ -98,12 +98,12 @@ header {
 .menu-item {
   margin: 20px;
   position: relative;
-  transition: all 0.3s;
+  transition: all 0.5s;
 }
-.item-vip::after {
+.menu-item:hover ::after {
   position: absolute;
   content: "";
-  width: 55px;
+  width: 100%;
   height: 4px;
   background-color: var(--white);
   right: 0;
@@ -131,6 +131,12 @@ header {
 .header-main-description {
   margin-top: 20px;
   text-align: justify;
+  line-height: 1.5;
+}
+.header-bottom {
+  display: flex;
+  justify-content: end;
+  margin-top: 100px;
 }
 /* start winning-awards => cena */
 .winning-awards-section {
