--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -322,7 +322,7 @@ body {
   padding-right: 10px;
 }
 .about-more-image {
-  width: 69px;
+  width: 70px;
   height: 70px;
   border-radius: 50%;
 }
@@ -336,8 +336,15 @@ body {
 }
 /* actors slid */
 .section-actors-slide {
-  padding-top: 100px;
+  padding-top: 60px;
   padding-bottom: 100px;
+}
+.section-actors-title{
+  text-align: center;
+  padding-bottom: 30px;
+}
+.section-actors-title > h2{
+  font-size: 1.3rem;
 }
 .actors-slid-container {
   display: grid;
@@ -369,7 +376,7 @@ body {
 .actors-description {
   height: 80px;
   text-align: center;
-  background: #0000009e;
+  background: var(--main-red);
   transition: 0.5s ease;
   opacity: 0;
   position: absolute;
@@ -379,8 +386,9 @@ body {
   -ms-transform: translate(-50%, -50%);
   color: white;
   font-size: 16px;
-  padding: 16px 32px;
+  padding-top: 25px;
   width: 180px;
+  text-decoration: underline;
 }
 .actors-description:hover {
   cursor: pointer;
