--- a/src/pages/actors-style.css
+++ b/src/pages/actors-style.css
@@ -368,20 +368,25 @@ button {
 }
 
 /*------------------------------------------------*/
-
+.gallery-container{
+  background: var(--black);
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
 div.gallery {
-  border: 1px solid var(--dark-red);
+  transition: all .4s ease-in-out;
 }
 div.gallery:hover {
-  box-shadow: 0px 0px 38px 4px var(--dark-red);
   border-radius: 5px;
+  box-shadow: 0px 0px 38px 4px var(--dark-red);
   filter: none;
 }
 
 div.gallery img {
   width: 100%;
-  height: auto;
+  height: 250px;
   filter: grayscale(100%);
+  transition: all .4s ease-in-out;
 }
 div.gallery img:hover {
   filter: none;
