--- a/src/pages/actors-style.css
+++ b/src/pages/actors-style.css
@@ -368,13 +368,13 @@ button {
 }
 
 /*------------------------------------------------*/
-.gallery-container{
+.gallery-container {
   background: var(--black);
   padding-top: 50px;
   padding-bottom: 50px;
 }
 div.gallery {
-  transition: all .4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 div.gallery:hover {
   border-radius: 5px;
@@ -386,7 +386,7 @@ div.gallery img {
   width: 100%;
   height: 250px;
   filter: grayscale(100%);
-  transition: all .4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 div.gallery img:hover {
   filter: none;
@@ -402,4 +402,13 @@ div.gallery img:hover {
   content: "";
   display: table;
   clear: both;
+}
+.footer-btn {
+  color: var(--white);
+  margin-top: 20px;
+  padding: 5px 15px;
+  border-radius: 30px;
+  background-color: var(--dark-red);
+  border: 1px solid transparent;
+  font-size: 18px;
 }
