--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -339,11 +339,11 @@ body {
   padding-top: 60px;
   padding-bottom: 100px;
 }
-.section-actors-title{
+.section-actors-title {
   text-align: center;
   padding-bottom: 30px;
 }
-.section-actors-title > h2{
+.section-actors-title > h2 {
   font-size: 1.3rem;
 }
 .actors-slid-container {
@@ -542,4 +542,13 @@ body {
 .footer-icon img:hover {
   box-shadow: 0px 0px 38px 4px var(--dark-red);
   border-radius: 10px;
+}
+.footer-btn {
+  color: var(--white);
+  margin-top: 20px;
+  padding: 5px 15px;
+  border-radius: 30px;
+  background-color: var(--dark-red);
+  border: 1px solid transparent;
+  font-size: 18px;
 }
